Fix tests to run on jdk21