@@ -389,7 +389,10 @@
                         --add-opens java.base/java.math=ALL-UNNAMED
                         --add-opens java.base/sun.nio.cs=ALL-UNNAMED
                         --add-opens java.base/java.nio=ALL-UNNAMED
-                        --add-exports java.base/sun.nio.cs=ALL-UNNAMED                 
+                        --add-exports java.base/sun.nio.cs=ALL-UNNAMED          
+                        --add-opens java.base/java.util.regex=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED 
+                        --add-opens java.base/java.util.stream=ALL-UNNAMED         
                     </argLine>
                     <classpathDependencyExcludes>
                         <classpathDependencyExclude>org.wso2.org.ops4j.pax.logging</classpathDependencyExclude>
