@@ -517,6 +517,8 @@
                         --add-opens java.base/sun.security.x509=ALL-UNNAMED
                         --add-opens java.base/java.security.cert=ALL-UNNAMED
                         --add-exports java.base/sun.security.x509=ALL-UNNAMED
+                        --add-opens java.base/java.util.regex=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
                     </argLine>
                     <systemProperties>
                         <property>
