@@ -190,6 +190,8 @@
                         --add-opens java.base/sun.net.www.protocol.jar=ALL-UNNAMED  
                         --add-opens java.base/java.math=ALL-UNNAMED
                         --add-opens java.base/java.nio.charset=ALL-UNNAMED
+                        --add-opens java.base/java.util.regex=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED 
                     </argLine>
                 </configuration>
                 <dependencies>
